Styles.css
/* Reset default styles for HTML and body */
html,
body {
  width: 100%;
  height: 100%;
  font-family: "Montserrat", sans-serif;
  background-color: #040d12;
  color: #93b1a6;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  /* Prevent horizontal scrolling */
  scroll-behavior: smooth;
}

/* Header Styles */
header {
  background-color: #183d3d;
  color: #f0f0f0;
  padding: 1vw 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
}

/* Heading Style in Header */
.header-title {
  font-size: 5vw;
  margin: 0 1vw;
  color: #f0f0f0;
}

/* Buttons Section */
.headerbuttons {
  all: initial;
  display: flex;
  align-items: center;
  margin-right: 3vw;
}

/* Button Styles */
.headerbutton {
  all: initial;
  background-color: #5c8374;
  color: #f0f0f0;
  padding: 1vw;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1vw;
  margin: 1vw;
  transition: background-color 0.3s;
}

.headerbutton:hover {
  background-color: #040d12;
}

.headerbutton:active {
  background-color: #93b1a6;
}

/* Media Query for Mobile */
@media (max-width: 700px) {
  header {
    justify-content: center;
    padding: 1vw 0;
    box-shadow: 0px 4px 5px rgba(255, 255, 255, 0.5);
  }

  .header-title {
    font-size: 10vw;
  }

  .headerbuttons {
    margin-top: 1.5vw;
  }

  .headerbutton {
    font-size: 4vw;
  }
}

main {
  padding-top: 10vw;
  margin: 0;
  overflow-x: hidden;
  /* Prevent horizontal scrolling */
}

/* Media Query for Mobile */
@media (max-width: 700px) {
  main {
    margin-top: 15vw;
    overflow-x: hidden;
  }
}

/* Apply some basic styling to the container and boxes */
.headshotcontainer {
  width: 99%;
  height: 25vw;
  margin: none;
  display: flex;
  justify-content: space-around;
  border: 1px solid #040d12;
  background-color: #5c8374;
}

.headshotcontainer img {
  height: 100%;
  width: 100%;
  object-fit: contain;
  border: 1px solid #93b1a6;
}

.headshotbox {
  height: 90%;
  width: 17vw;
  text-align: center;
  margin: 1vw;
}

@media (max-width: 700px) {
  .headshotcontainer {
    height: 50vw;
    justify-content: center;
  }

  .headshotbox {
    width: 80vw;
    margin: 1vw;

    padding: 0;
  }
}

/* For scrolling list */
.scrolling-list-container {
  background-color: #93b1a6;
  padding: none;
  margin: none;
}
.scrolling-list {
  list-style: none;
  overflow: hidden;
  white-space: nowrap;
  animation: scroll-left 30s linear infinite;
  width: 100%;
  padding: 0 10px; /* Add horizontal padding to the scrolling list */
  color: #040d12;
}

.scrolling-list li {
  text-decoration: none;
  display: inline;
  margin-right: 1vw;
  font-size: 1.5em;
  letter-spacing: 0.5vw; /* Adjust letter-spacing to a smaller value */
}

@keyframes scroll-left {
  0% {
    transform: translateX(100%);
  }

  100% {
    transform: translateX(-100%);
  }
}

@media (max-width: 700px) {
  .scrolling-list {
    white-space: nowrap;
    overflow: hidden;
    animation: scroll-left 20s linear infinite; /* Adjust duration as needed */
    width: 300%;
    font-size: 14px; /* Adjust font size for mobile */
    padding: 10px 0; /* Add padding for mobile */
  }
  .scrolling-list li {
    display: inline;
    margin-right: 10px; /* Adjust spacing for mobile */
  }
}

.about-me h2 {
  margin-left: 5vw;
}
.about-me p {
  margin: 1vw 5vw;
  font-size: 1.5em;

}
.logo-container {
  margin-top: 5vw;
  text-align: center;
  background-color: #183d3d;
  padding: 3vw;
}

.logo {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.logo img {
  width: 10vw; /* Adjust the width as needed */
  height: 7.5vw; /* Maintain a 4:3 aspect ratio (3/4 * 10vw) */
  margin-right: 2vw; /* Adjust the margin as needed */
}


 footer{
  margin: 5vw;
  border-top: 3px solid #183d3d;
  border-bottom: 3px solid #183d3d;

 }
.contact h2 {
  margin-left: 5vw;}

.contact p {
  margin: 1vw 5vw;
}

.Project-logo-buttons{margin-top: 10vw;}
.Projects{
  margin: 0 5vw;
}

